[project]
name = "check_run"
version = "15.12.0"
description = "Payables utility for ERPNext"
authors = [
    { name = "AgriTheory", email = "support@agritheory.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = "^3.10"
atnacha = { git = "https://github.com/AgriTheory/atnacha.git" }
pdfplumber = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-order = "^1.2.1"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
hrms = ">=15.0.0,<16.0.0"

[tool.bench.dev-dependencies]
pytest = "~=8.2.2"
pytest-cov = "~=5.0.0"
pytest-order = "~=1.2.1"

[tool.codespell]
skip = "CHANGELOG.md"

[tool.pytest.ini_options]
addopts = "-s --disable-warnings"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "check_run/__init__.py:__version__"
]
build_command = "echo 1"

[tool.semantic_release.branches.version]
match = "version-(14|15)"
